--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">UserHub - User Repositories on GitHub</string>
     <string name="api_error_repos">Error Loading Repositories</string>
+    <string name="forks_title">Forks</string>
+    <string name="stars_title">Stars</string>
 </resources>
